<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/tvNomeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Danilo Carvalho Rocha"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/tvCaracteristicaUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gerador"
        android:textSize="18sp"
        android:textColor="@color/Lidero_Laranja_Vivo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105"
        app:srcCompat="@drawable/line_20" />

    <ImageView
        android:id="@+id/ivBannerHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157"
        app:srcCompat="@drawable/retangulohome" />

    <TextView
        android:id="@+id/tvEmbaixoHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ganhe a promoção que você merece."
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338" />

    <TextView
        android:id="@+id/tvEmbaixoHome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Invista em você, a partir de 12x de R$ 29,90 "
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <TextView
        android:id="@+id/tvCategorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Categorias"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

    <Button
        android:id="@+id/btnOratória"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Lidero_Carbon"
        android:text="Oratória"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <Button
        android:id="@+id/btnEmpreendedorismo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Lidero_Carbon"
        android:text="Empreendedorismo"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <Button
        android:id="@+id/btnEnsinar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Lidero_Carbon"
        android:text="Ensinar"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <Button
        android:id="@+id/btnSoftSkills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Lidero_Carbon"
        android:text="Soft Skills"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <Button
        android:id="@+id/btnHardSkills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Lidero_Carbon"
        android:text="Hard Skills"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <TextView
        android:id="@+id/tvSeusCursos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Seus Cursos"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="174dp"
        android:layout_height="107dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778"
        app:srcCompat="@drawable/cursosbanner" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="174dp"
        android:layout_height="107dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778"
        app:srcCompat="@drawable/cursosbanner" />

    <ImageButton
        android:id="@+id/ivVetorHome"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:elevation="4dp"
        android:src="@drawable/vetor_home"
        android:backgroundTint="@color/Lidero_Carbon"
        android:contentDescription="@string/VetorCasaBranca"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Barra_De_Navegacao_Inferior"
        app:layout_constraintVertical_bias="0.297"
        app:tint="@color/Lidero_Amarelo_Ouro"/>

    <ImageButton
        android:id="@+id/ivVetorCursos"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:elevation="4dp"
        android:src="@drawable/vetor_play"
        android:backgroundTint="@color/Lidero_Carbon"
        android:contentDescription="@string/VetorPlayCursosBranco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Barra_De_Navegacao_Inferior"
        app:layout_constraintVertical_bias="0.297" />

    <ImageButton
        android:id="@+id/ivVetorPerfil"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:elevation="4dp"
        android:src="@drawable/vetor_perfil"
        android:backgroundTint="@color/Lidero_Carbon"
        android:contentDescription="@string/VetorPerfiAmarelo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Barra_De_Navegacao_Inferior"
        app:layout_constraintVertical_bias="0.324"
        app:tint="@color/white"
        />

    <TextView
        android:id="@+id/tvMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:text="@string/Menu"
        android:textAlignment="center"
        android:textColor="@color/Lidero_Amarelo_Ouro"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivVetorHome"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvCursos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="3dp"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:text="@string/Cursos"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/Barra_De_Navegacao_Inferior"
        app:layout_constraintStart_toEndOf="@+id/tvMenu"
        app:layout_constraintTop_toBottomOf="@+id/ivVetorCursos"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:text="@string/Perfil"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCursos"
        app:layout_constraintTop_toBottomOf="@+id/ivVetorPerfil" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Barra_De_Navegacao_Inferior"
        android:layout_width="412dp"
        android:layout_height="100dp"
        android:background="@color/Lidero_Carbon"
        android:gravity="center_horizontal"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>